--- a/css/main.css
+++ b/css/main.css
@@ -1019,6 +1019,7 @@ textarea {
         -ms-flex-pack: center;
             justify-content: center;
     margin-bottom: 50px;
+    margin-top: -15px;
   }
 }
 
