--- a/sass/components/_portfolio-filter.scss
+++ b/sass/components/_portfolio-filter.scss
@@ -17,20 +17,19 @@
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
-    margin-top: -15px;
+    // margin-top: -15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
     list-style-type: none;
     justify-content: center;
     margin-bottom: 50px;
-    margin-top: -15px;
   }
 }
 
 .filter__item {
   margin-right: 8px;
-  margin-top: 15px;
+  margin-top: 0px;
 }
 .filter__:last-child {
   margin-right: 0px;
