--- a/css/main.css
+++ b/css/main.css
@@ -1292,6 +1292,28 @@ textarea {
   border-radius: 2px;
 }
 
+.hero__button {
+  color: var(--primary-background-color);
+  background: var(--accent);
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: inline-block;
+  min-width: 200px;
+  min-height: 50px;
+  border: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  padding: 10px 32px 10px 32px;
+  -webkit-box-shadow: var(--btn-shadow);
+          box-shadow: var(--btn-shadow);
+  border-radius: 4px;
+}
+
 .hero {
   padding-top: 118px;
   padding-bottom: 118px;
